assets/styles/_reset.scss
/* Reset all margins */
* {
  margin: 0;
}

html {
  box-sizing: border-box;
  height: 100%;
  overflow-wrap: break-word;
  text-size-adjust: none;

  *,
  *::before,
  *::after {
    box-sizing: inherit;
  }

  /*
  * Add smooth scrolling behavior when focused within the html element
  * https://css-tricks.com/fixing-smooth-scrolling-with-find-on-page/
  */
  &:focus-within {
    scroll-behavior: smooth;
  }
}

html,
body {
  height: 100%;
}

a:not([class]) {
  text-decoration-skip-ink: auto;
}

[x-cloak] {
  display: none !important;
}

/* Remove padding on lists */
ul,
ol {
  padding: 0;
}

/* Media elements defaults */
img,
picture,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block;
  max-width: 100%;
}

img {
  height: initial;
  width: 100%;
}

/* Reset font styling */
input,
button,
textarea,
select,
table {
  font: inherit;
}

/* Reset default styling for buttons */
button {
  appearance: none;
  background-color: transparent;
  color: inherit;
  padding: 0;
  text-align: inherit;
}

/* Prevent sub and sup elements from affecting the line height */
sub,
sup {
  font-size: 0.75em;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  inset-block-end: -0.25em;
}

sup {
  inset-block-start: -0.5em;
}

/* Normalize outline to ensure A11y */
:focus-visible {
  @include normalize-outline;
}

/* Disable animations and transitions for users that prefer reduced motion */
@media (prefers-reduced-motion: reduce) {

  /* Disable smooth scrolling for html element when focused within */
  html:focus-within {
    scroll-behavior: auto;
  }

  /* Disable animations and transitions for all elements, including pseudo-elements */
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    scroll-behavior: auto !important;
    transition-duration: 0.01ms !important;
  }
}

/* Exceptions */

.single-project {
  [name='SliderImages'],
  [name='BlockWysiwyg'],
  [name='BlockImage'] {
    padding-left: 0;
    padding-right: 0;
    width: 100%;
  }
}

.single-post {
  [name='SliderImages'],
  [name='BlockWysiwyg'],
  [name='BlockImage'] {
    padding-left: 0;
    padding-right: 0;
  }
}

/* Fix Safari bug on column width in listings */
[data-type='listing'] {
  .post {
    .content {
      width: fill-available;
    }
  }
}

